# hmi3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  курсовая работа.docx
examples/: demo.cpp
include/hmi3/: command_receiver.hpp  container.hpp
include/hmi3/components/: component.hpp
src/: command_receiver.cpp  container.cpp
tests/: test_command_receiver.cpp  test_container.cpp
